# im2video

./: README.md  ReadMe.txt  install.md  sh.bat
doc/: input.xml  input_audi.xml  input_black.xml  input_linux.xml  ppt.pptx  test.xml  图片转视频使用及测试说明书.docx  图片转视频详细设计说明书.docx  对外接口规范.txt  特效制作及说明.docx
effects/: effect_list.md  next_version_config.xml
effects/conveyer/: pts_a_1.txt  pts_a_2.txt  pts_b_1.txt
effects/diagonal1/: config.xml  pts_a_1.txt
effects/diagonal2/: config.xml  pts_a_1.txt
effects/erase1/: erase_feature.m
effects/eraseleft/: config.xml
effects/eraseout/: config.xml
effects/fadeinout/: config.xml
effects/flyover/: pts_b_1.txt
effects/gallery/: config.xml  pts_a_1.txt
effects/gate/: pts_a_1.txt
effects/hinge/: config.xml
effects/pushleft/: config.xml
effects/shapecircle/: config.xml
effects/shapeclock/: config.xml
effects/shuffle/: pts_a_1.txt
effects/thunder/: config.xml  pts_a_1.txt
effects/uncover/: config.xml  pts_a_1.txt
example/: input.xml  input_gds.xml
how_to_make_effect/: README.md  annimation.m  imgen.m  transform.m
src/: Alpha.cpp  CMakeLists.txt  CMakeLists.txt.win  CXmlParser.cpp  CXmlParser.h  Effect.cpp  FrameGenerator.cpp  ResService.cpp  ResService.h  im2video.cpp  im2video.h  log5cxx.cpp  log5cxx.h  lsq.cpp  lsq.h  main.cpp  opencv_warp.h  types.h  util.h  videomix.cpp  videomix.h
src/xml/: Markup.cpp
